--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="https://landing-page-front-ib8v.vercel.app/" target="_blank">
+            <img src="/public/images/LogoVenusLight.png" alt="logo venus" width={300} height={80} >
+          </a>
+        </div>
+    </nav>
     <div class="container">
 
         <br>
@@ -49,7 +56,7 @@
                             <a href="/delete/<%= productos[i].id %>" type="button" class="btn btn-primary">Eliminar</a>
                         </td>
                     </tr>
-                    <% } %>
+                <% } %>
             </tbody>
         </table>
     </div>
