Archivo home.ejs agregado

--- a/src/views/Products/create.ejs
+++ b/src/views/Products/create.ejs
@@ -14,7 +14,7 @@
     <h1>CREAR UN NUEVO PRODUCTO</h1>
   </div>
   <div class="container">
-    <form action="/save" method="post">
+    <form action="/create" method="post">
       <div class="form-group">
         <label for="name">name</label>
         <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
