--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,6 +15,7 @@
         <br>
         <h1>Bienvenidos!</h1>
         <a href="/products" type="button" class="btn btn-primary">Ver productos</a>
+        <a href="/users" type="button" class="btn btn-primary">Ver usuarios</a>
     </div>
 </body>
 
