deleteUser and updateUser added

--- a/src/views/User/home.ejs
+++ b/src/views/User/home.ejs
@@ -28,8 +28,8 @@
                         <td><%= users[i].celphone %></td>
                         <td><%= users[i].banned %></td>
                         <td>
-                            <!-- <a href="/edit/<%= users[i].id %>" type="button" class="btn btn-primary">Editar</a>
-                            <a href="/delete/<%= users[i].id %>" type="button" class="btn btn-primary">Eliminar</a> -->
+                            <a href="/editUser/<%= users[i].id %>" type="button" class="btn btn-primary">Editar</a>
+                            <a href="/deleteUser/<%= users[i].id %>" type="button" class="btn btn-primary">Eliminar</a>
                         </td>
                     </tr>
                 <% } %>
