--- a/src/views/User/login.ejs
+++ b/src/views/User/login.ejs
@@ -24,7 +24,7 @@
         <input type="text" class="form-control" id="password" name="password" placeholder="Enter password">
       </div>
       <button type="submit" class="btn btn-primary">Ingresar</button>
-      <a class="btn btn-primary" href="/products" role="button">Cancelar</a>
+      <a class="btn btn-primary" href="/users" role="button">Cancelar</a>
     </form>
   </div>
 </body>
